<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lengths</string>
    <string name="hello_world">Hello world!</string>
    <string name="help">Show help</string>
    <string name="action_settings">Settings</string>
    <string name="main_about">About</string>
    <string name="butADefault">Measure\nA</string>
    <string name="butBDefault">Measure\nB</string>
    <string name="butABDefault">A -> B\n---</string>
    <string name="helpText1">This little app allows you to measure approximately the 
        distance between two points which are on the floor.</string>
    <string name="helpText2"> - Hold your device at eye level and aim at the point A with the cross in the 
        middle of the screen. Then click on the first button.\n - Do the same with
        point B without translating your device, only rotating it.\n - Click on the third button to copy the calculated distance 
        to the clipboard.\nThe tools on the top help you to figure out if your sensors are working well. 
        If not, try a search with the keywords \"android calibrate orientation sensor\".</string>
        <string name="helpText3">Your height H is needed to deduce the distances from the angles. 
            The level of your eyes is approximated at 0.936 x H.</string>
<string name="height_label">Your height : </string>
<string name="height_default">1.75</string>
</resources>