<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/helpText1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/explanation" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/helpText2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center" 
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height_label" />
            <EditText 
                android:id="@+id/height_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height_default"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/helpText3" />
        
        
        <Button
            android:id="@+id/button_close_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="OK" />
    </LinearLayout>

</ScrollView>