<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.goetschy.android.lengths.MainActivity" >

    <SurfaceView
        android:id="@+id/main_surfaceview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </SurfaceView>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:src="@drawable/cross" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top" 
        android:layout_margin="3dp">

        <ImageView
            android:id="@+id/azimutBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/circle" />

        <ProgressBar
            android:id="@+id/rollBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="180dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:max="100"
            android:progress="50"
            android:progressDrawable="@drawable/horizontalprogressbar" />

        <ProgressBar
            android:id="@+id/pitchBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="20dp"
            android:layout_height="180dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/rollBar"
            android:layout_marginTop="5dp"
            android:max="100"
            android:progress="50"
            android:progressDrawable="@drawable/verticalprogressbar" />
    </RelativeLayout>

<!--     <TextView -->
<!--         android:id="@+id/main_text" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_gravity="bottom" -->
<!--         android:background="@android:color/white" -->
<!--         android:visibility="gone" /> -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/pointA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="0dp"
            android:layout_weight="50"
            android:background="@drawable/button"
            android:text="@string/butADefault" />

        <Button
            android:id="@+id/pointB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="0dp"
            android:layout_weight="50"
            android:background="@drawable/button"
            android:enabled="false"
            android:text="@string/butBDefault" />

        <Button
            android:id="@+id/distAB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="0dp"
            android:layout_weight="50"
            android:background="@drawable/button"
            android:enabled="false"
            android:text="@string/butABDefault" />
    </LinearLayout>

</FrameLayout>